# weather_mmdt_w8

./: ETL_modularity_Aye_Khin_Khin_Hpone_139_Week8_weather.ipynb  Week_8_weather_Aye_Khin_Khin_Hpone_139.ipynb  requirements.txt
.github/workflows/: main.yaml  trigger_test.yaml
ayekhinkhinhpone-main/: .gitignore  README.md  main.yaml  pyproject.toml
ayekhinkhinhpone-main/data/: classroom.csv  student.csv
ayekhinkhinhpone-main/week9/: etl_demo.py
