[project]
name = "sqlalchemy-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
